--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "fs.promises": "^0.1.2",
+    "jwt-promise": "^1.0.0",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0"
   }
