--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "assignment",
+  "name": "SP-Travel",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,10 +15,21 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs.promises": "^0.1.2",
     "jwt-promise": "^1.0.0",
     "multer": "^1.4.2",
-    "mysql2": "^2.1.0"
-  }
+    "mysql2": "^2.2.5"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Asienwald/sp-travel.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/Asienwald/sp-travel/issues"
+  },
+  "homepage": "https://github.com/Asienwald/sp-travel#readme"
 }
